--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-    <title>Universitas Bandung</title>
+    <title>Universitas Antlia</title>
     <meta
       name="description"
-      content="Website organisasi sosial Universitas Bandung oleh AISCO Indonesia"
+      content="Website organisasi sosial Universitas Antlia oleh AISCO Indonesia"
     />
   </head>
 
